bk_ida/gccida/c1/can_throw_external
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3598:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3598:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3601:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type_list; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3609:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3611:14: error: expected expression
v2 = *( rtx *)( *( _QWORD *)( v3 + 8) + 8LL); 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3615:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( v2, REG_EH_REGION, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3615:10: error: expected identifier or '('
reg_note = find_reg_note( v2, REG_EH_REGION, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3616:6: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
if ( reg_note ) 
     ^~~~~~~~
     reg_names
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/hard-reg-set.h:485:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3618:20: error: use of undeclared identifier 'reg_note'
v8 = *( _QWORD *)( reg_note->fld[0].rtwint + 8); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/except.c:3648:28: error: expected expression
return may_trap_p( *( rtx *)&v2[2]) != 0; 
                           ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/can_throw_external/src/obj/except.o] Error 1
